# bioinformatics-learning

./: .gitignore  COURSE_STATUS.en.md  COURSE_STATUS.zh.md  LICENSE  OPEN_COURSE.md  README.en.md  README.md  START_HERE.en.md  START_HERE.md  content-release.example.yml  course-manifest.yml  pyproject.toml
.codex/skills/bilingual-textbook/: SKILL.md
.codex/skills/writing-bioinformatics-tutorials/: SKILL.md
datasets/: CATALOG.en.md  CATALOG.md  catalog.yml
docs/superpowers/plans/: 2026-07-15-codex-interactive-textbook-plugin.md  2026-07-15-codex-native-bilingual-textbook-ui.md  2026-07-15-local-python-environment-placeholder.md  2026-07-16-standalone-html-textbook-migration.md
docs/superpowers/specs/: 2026-07-15-codex-interactive-textbook-plugin-design.md  2026-07-15-codex-native-bilingual-textbook-ui-design.md  2026-07-15-local-python-environment-placeholder-design.md  2026-07-16-standalone-html-textbook-migration-design.md
plugin/codex-bilingual-textbook/: README.md
plugin/codex-bilingual-textbook/.codex-plugin/: plugin.json
plugin/codex-bilingual-textbook/app/: README.md  index.html  (+3 more)
src/codex_textbook/: __init__.py  cli.py  manifest.py  models.py  release.py  render.py  state.py  updater.py  validation.py
ui/templates/: COURSE_STATUS.en.template.md  COURSE_STATUS.zh.template.md  LESSON.en.template.md  LESSON.zh.template.md  START_HERE.en.template.md  START_HERE.zh.template.md
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/scripts/: generate-content-manifest.mjs
web/src/: App.tsx  contracts.ts  main.tsx  schemas.ts
(+71 files in other folders)
