[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bilingual-textbook"
version = "0.1.0"
description = "Authoring and immutable content-release tools for the standalone Biolearning bilingual textbook"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
course-tool = "codex_textbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
